# pricing-estimate-system

./: .dockerignore  README.md  docker-compose.yaml
backend/: .env.example  Dockerfile  pyproject.toml
backend/api/: routers.py  urls.py
backend/api/catalog/: serializers.py  urls.py  views.py
backend/api/estimates/: serializers.py  urls.py  views.py
backend/api/price_lists/: serializers.py  urls.py  views.py
backend/api/projects/: serializers.py  urls.py  views.py
backend/api/suppliers/: serializers.py  urls.py  views.py
backend/apps/catalog/: admin.py  models.py  tests.py
backend/apps/catalog/migrations/: 0001_initial.py  0002_enable_vector.py  0003_catalogitem_embedding.py  0004_catalogitem_normalized_name.py
backend/apps/estimates/: admin.py  apps.py  models.py
backend/apps/estimates/migrations/: 0001_initial.py  0002_estimate_column_mapping_estimate_parse_task_id_and_more.py  0003_estimate_matching_progress_estimate_matching_status_and_more.py
backend/apps/matching/: admin.py  apps.py  models.py  tests.py
backend/apps/matching/migrations/: 0001_initial.py  (+3 more)
backend/apps/price_lists/: admin.py  apps.py  models.py  tests.py
backend/apps/projects/: admin.py  models.py
backend/apps/suppliers/: admin.py  apps.py  models.py
backend/config/: __init__.py  settings.py  urls.py
backend/services/estimate/: parser.py  processor.py
backend/services/matching/: embeddings.py  matcher.py
backend/services/price_list/: matcher.py  parser.py  processor.py
backend/tasks/: celery.py  estimates.py  matching.py  price_lists.py
frontend/: Dockerfile  (+4 more)
(+32 files in other folders)
